<resources>
    <string name="app_delete">Удалить</string>
    <string name="app_add">Добавить</string>
    <string name="app_cancel">Отмена</string>
    <string name="app_delete_msg">Подтвердите удаление товара</string>
    <string name="app_apply">Применить</string>
    <string name="app_back">Верунться</string>
    <string name="back_message">Вы действительно хотите вернуться в главное меню?</string>
    <string name="delete_success_msg">Товар успешно удален</string>
    <string name="delete_failed_msg">Ошибка удаления товара</string>
    <string name="department">Отдел</string>
    <string name="brand">Бренд</string>
    <string name="category_1">Категория</string>
    <string name="product">Товар</string>

    <string name="app_name">LMNata</string>
    <string name="select_department">Выбрать отдел</string>
    <string name="department_default">отдел</string>

    <string name="add_product">Добавить товар</string>

    <string name="add_product_name">Введите название товара</string>
    <string name="add_product_article">Введите артикул товара</string>
    <string name="add_product_description">Введите описание товара</string>
    <string name="add_product_department">Выберите отдел</string>
    <string name="add_product_photo">Загрузите фото товара</string>
    <string name="add_product_barecode">Введите штрих код(первые 12 цифр)</string>
    <string name="add_product_category">Введите категорию товара</string>
    <string name="add_product_brand">Введите бренд товара</string>

    <string name="input_name">Введите название</string>
    <string name="input_article">Введите артикул</string>
    <string name="input_description">Введите описание</string>
    <string name="add_image">Добавить изображение из галереи</string>
    <string name="input_barecode">Введите штрих код</string>
    <string name="input_category">Введите категорию</string>
    <string name="input_brand">Введите бренд товара</string>
    <string name="add_new_brand">Добавить бренд</string>
    <string name="add_new_category">Добавить категорию</string>
    <string name="confirm_new_product">Добавить товар</string>

    <string name="file_not_found">Файл не найден</string>
    <string name="file_not_choosen">Файл не выбран</string>
    <string name="product_default">товар</string>
    <string name="description_default">описание</string>
    <string name="article_default">артикул</string>
    <string name="product_name">Название товара</string>
    <string name="product_article">Артикул товара</string>
    <string name="product_description">Описание товара</string>
    <string name="department_name">Название отдела</string>
    <string name="product_photo">Изображение товара</string>
    <string name="product_barecode">Штрих код</string>
    <string name="product_category">Категория товара</string>
    <string name="product_brand">Бренд товара</string>

    <string name="building">1. Строительные материалы</string>
    <string name="joiner">2. Столярные изделия</string>
    <string name="electrician">3. Электротовары</string>
    <string name="instrument">4. Инструменты</string>
    <string name="floor">5. Напольные покрытия</string>
    <string name="tile">6. Плитка</string>
    <string name="sanitary">7. Сантехника</string>
    <string name="watersupp">8. Водоснабжение</string>
    <string name="garden">9. Сад</string>
    <string name="hardware">10. Скобяные изделия</string>
    <string name="paint">11. Краски</string>
    <string name="design">12. Декор</string>
    <string name="light">13. Освещение</string>
    <string name="storage">14. Хранение</string>
    <string name="kitchen">15. Кухни</string>

    <string name="error_departments_loading">Не могу загрузить отделы из базы</string>
    <string name="error_brands_loading">Не могу загрузить бренды из базы</string>
    <string name="error_categories_loading">Не могу загрузить категории из базы</string>
    <string name="error_products_loading">Не могу загрузить товары из базы</string>
    <string name="error_product_insert">Не могу добавить товар в базу</string>
    <string name="error_permissions">Ошибка прав доступа к системам устройства. Без необходимых прав приложение не сможет полностью функционировать. Если права были выданы, это сообщение исчезнет при следующем запуске приложения.</string>
    <string name="error_barcode_parce">Ошибка формирования штрих кода</string>
    <string name="error_barcode_length">Длина штрих кода должна быть равна 12 символам</string>
    <string name="error_field_empty">Поле \"%1$s\" не должно быть пустым</string>
    <string name="category_list">Категория</string>
    <string name="brend_list">Бренд</string>
    <string name="uncategorized_btn">Товары без категории</string>
    <string name="watch_uncat">Открыть список товаров без категории</string>
    <string name="search_hint">Введите название товара</string>
    <string name="search_btn">Поиск</string>
    <string name="product_name_search_btn">Поиск товара по имени</string>
    <string name="no_products_found">Товар отсутсвует</string>
    <string name="empty_value" />
    <string name="no_brand">Без бренда</string>
    <string name="no_category">Без категории</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="add_brand">Добавить бренд</string>
    <string name="add_category">Добавить категорию</string>
    <string name="add_brand_name">Введите имя бренда</string>
    <string name="brand_list">Список брендов</string>
    <string name="add_category_name">Введите имя категории</string>
    <string name="category">Список категорий</string>
    <string name="add_brand_choose">Выберите бренд</string>
    <string name="app_update">Изменить</string>


    <string name="brand_delete_msg">При удалении бренда так же удалятся принадлежащие ему категории и товары. Подтвердите удаление бренда</string>
    <string name="category_delete_msg">При удалении категории так же удалятся принадлежащие ей товары. Подтвердите удаление категории</string>
    <string name="product_delete_msg">Подтвердите удаление товара</string>
    <string name="brand_delete_success_msg">Бренд успешно удален</string>
    <string name="brand_delete_failed_msg">Ошибка удаления бренда</string>
    <string name="category_delete_success_msg">Категория успешно удалена</string>
    <string name="category_delete_failed_msg">Ошибка удаления категории</string>
    <string name="product_delete_success_msg">Товар успешно удален</string>
    <string name="product_delete_failed_msg">Ошибка удаления товара</string>

    <string name="rename_brand">Введите новое имя бренда</string>
    <string name="rename_category">Введите новое имя категории</string>
</resources>
