<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_product_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <ScrollView
        android:id="@+id/add_product_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/add_product_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_name"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="29dp" />

            <EditText
                android:id="@+id/add_product_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_name"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <TextView
                android:id="@+id/add_product_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_article" />

            <EditText
                android:id="@+id/add_product_article_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_article"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <TextView
                android:id="@+id/add_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_description" />

            <EditText
                android:id="@+id/add_product_description_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_description"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="167dp" />

            <TextView
                android:id="@+id/add_product_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_department"
                tools:layout_editor_absoluteX="47dp"
                tools:layout_editor_absoluteY="205dp" />

            <Spinner
                android:id="@+id/add_product_department_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/add_product_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_photo" />

            <Button
                android:id="@+id/add_product_photo_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_image" />

            <ImageView
                android:id="@+id/add_product_photo_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/file_not_choosen"
                android:scaleType="centerCrop"
                app:srcCompat="@android:color/transparent" />

            <TextView
                android:id="@+id/add_product_barecode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_barecode" />

            <EditText
                android:id="@+id/add_product_barecode_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_barecode"
                android:inputType="number"
                android:maxLength="12" />

            <TextView
                android:id="@+id/add_product_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_category" />

            <EditText
                android:id="@+id/add_product_category_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_category"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/add_product_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_brand" />

            <EditText
                android:id="@+id/add_product_brand_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/input_brand"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/add_product_confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_new_product" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>