<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategoryActivity">

    <LinearLayout
        android:id="@+id/addBrandLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/add_category_dept_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_product_department" />

        <Spinner
            android:id="@+id/add_category_dept_spinner"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/add_category_brand_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_brand_choose" />

        <Spinner
            android:id="@+id/add_category_brand_spinner"
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/add_category_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_list" />

        <EditText
            android:id="@+id/add_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_category_name"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/add_category_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_category" />

        <TextView
            android:id="@+id/add_category_list_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <ListView
            android:id="@+id/add_category_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>