<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:id="@+id/add_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/addProductBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/add_product" />

        <Button
            android:id="@+id/addBrandBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/add_brand" />

        <Button
            android:id="@+id/addCategoryBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/add_category" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>