<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/product_layout"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:descendantFocusability="blocksDescendants"
    android:focusable="auto">

    <ImageView
        android:id="@+id/product_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/file_not_found"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/product_info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/product_icon"
        android:layout_toStartOf="@+id/product_delete_btn"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/product_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_default"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/empty_value" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/product_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/empty_value"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/ic_delete"
        android:visibility="gone" />

</RelativeLayout>