<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainActivityLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/selectDepartmentBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/select_department" />

        <Button
            android:id="@+id/addProductBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/add_product" />

        <Button
            android:id="@+id/searchProductBtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/product_name_search_btn" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>