<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/brandCategoryLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrendCategoryList">

    <LinearLayout
        android:id="@+id/bcLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/categoryLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/category_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_list" />

            <ListView
                android:id="@+id/category_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/brandLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/brand_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brend_list" />

            <ListView
                android:id="@+id/brand_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uncat_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uncategorized_btn" />

            <Button
                android:id="@+id/uncat_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watch_uncat" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>